--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -22,7 +22,7 @@
         "storybook": "start-storybook",
         "build": "npm run build:js && npm run build:types",
         "build:types": "tsc --emitDeclarationOnly",
-        "build:js": "NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --ignore '**/__tests__,**/__stories__' --delete-dir-on-start",
+        "build:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --ignore '**/__tests__,**/__stories__' --delete-dir-on-start",
         "prepare": "npm run build",
         "test": "jest --env=jsdom"
     },
