--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^1.9.0",
         "@typescript-eslint/parser": "^1.9.0",
+        "cross-env": "^5.2.0",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.0",
