--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -20,9 +20,12 @@
     ],
     "scripts": {
         "storybook": "start-storybook",
-        "build": "npm run build:js && npm run build:types",
+        "build": "run-s build:**",
         "build:types": "tsc --emitDeclarationOnly",
-        "build:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --ignore '**/__tests__,**/__stories__' --delete-dir-on-start",
+        "build:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --delete-dir-on-start",
+        "watch": "run-p -l watch:**",
+        "watch:types": "tsc -w --emitDeclarationOnly",
+        "watch:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --delete-dir-on-start --watch",
         "prepare": "npm run build",
         "test": "jest --env=jsdom"
     },
@@ -65,10 +68,11 @@
         "babel-loader": "^8.0.6",
         "babel-plugin-react-remove-properties": "^0.3.0",
         "babel-preset-react-app": "^9.0.0",
+        "cross-env": "^5.2.0",
         "jest": "^24.8.0",
+        "npm-run-all": "^4.1.5",
         "react-test-renderer": "^16.8.6",
         "require-context.macro": "^1.0.4",
-        "rimraf": "^2.6.3",
         "typescript": "^3.5.1"
     }
 }
