--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -20,12 +20,13 @@
     ],
     "scripts": {
         "storybook": "start-storybook",
-        "build": "run-s build:**",
+        "clean": "rimraf lib",
+        "build": "cross-env NODE_ENV=development run-s clean build:**",
         "build:types": "tsc --emitDeclarationOnly",
-        "build:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --delete-dir-on-start",
-        "watch": "run-p -l watch:**",
+        "build:js": "babel src --out-dir lib --extensions '.ts,.tsx' --ignore '**/__tests__, **/__stories__'",
+        "watch": "cross-env NODE_ENV=development npm-run-all clean -pl watch:**",
         "watch:types": "tsc -w --emitDeclarationOnly",
-        "watch:js": "cross-env NODE_ENV=production babel src --out-dir lib --extensions '.ts,.tsx' --delete-dir-on-start --watch",
+        "watch:js": "babel src --out-dir lib --extensions '.ts,.tsx' --ignore '**/__tests__, **/__stories__' --watch",
         "prepare": "npm run build",
         "test": "jest --env=jsdom"
     },
@@ -73,6 +74,7 @@
         "npm-run-all": "^4.1.5",
         "react-test-renderer": "^16.8.6",
         "require-context.macro": "^1.0.4",
+        "rimraf": "^2.6.3",
         "typescript": "^3.5.1"
     }
 }
