--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint:ci": "eslint '*/**/*.{js,ts,tsx}' --report-unused-disable-directives",
         "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --cache --fix",
         "test:unit": "yarn workspace amplify-material-ui test",
-        "test:e2e": "yarn workspace e2e-tests test"
+        "test:e2e": "yarn workspace e2e-tests test",
+        "prepare": "lerna run prepare"
     },
     "workspaces": [
         "e2e-tests",
