--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -62,6 +62,7 @@
         "@storybook/addon-actions": "^5.1.3",
         "@storybook/addon-storyshots": "^5.1.3",
         "@storybook/react": "^5.1.3",
+        "@testing-library/react": "^8.0.1",
         "@types/jest": "^24.0.13",
         "@types/storybook__addon-storyshots": "^4.0.1",
         "@types/storybook__react": "^4.0.2",
