--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -43,7 +43,9 @@
         ]
     },
     "dependencies": {
-        "react-is-mounted-hook": "^1.0.1"
+        "formik": "^2.0.1-rc.5",
+        "react-is-mounted-hook": "^1.0.1",
+        "zxcvbn": "^4.4.2"
     },
     "peerDependencies": {
         "@aws-amplify/auth": "^1.2.24",
@@ -66,6 +68,7 @@
         "@types/jest": "^24.0.13",
         "@types/storybook__addon-storyshots": "^4.0.1",
         "@types/storybook__react": "^4.0.2",
+        "@types/zxcvbn": "^4.4.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-react-remove-properties": "^0.3.0",
