--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -47,6 +47,7 @@
         "react-is-mounted-hook": "^1.0.1",
         "react-recaptcha-hook": "^1.0.5",
         "react-script-hook": "^1.0.5",
+        "tiny-invariant": "^1.0.6",
         "zxcvbn": "^4.4.2"
     },
     "peerDependencies": {
