--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -74,6 +74,7 @@
         "@types/zxcvbn": "^4.4.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
+        "babel-plugin-dev-expression": "^0.2.2",
         "babel-plugin-react-remove-properties": "^0.3.0",
         "babel-preset-react-app": "^9.0.0",
         "cross-env": "^5.2.0",
