--- a/amplify-material-ui/package.json
+++ b/amplify-material-ui/package.json
@@ -43,6 +43,7 @@
         ]
     },
     "dependencies": {
+        "clsx": "^1.0.4",
         "formik": "^2.0.1-rc.5",
         "react-is-mounted-hook": "^1.0.1",
         "react-recaptcha-hook": "^1.0.5",
@@ -54,35 +55,39 @@
         "@aws-amplify/auth": "^1.2.24",
         "@aws-amplify/core": "^1.0.27",
         "@material-ui/core": "^4.0.1",
-        "@material-ui/icons": "^4.0.1"
+        "@material-ui/icons": "^4.0.1",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6"
     },
     "devDependencies": {
-        "@aws-amplify/auth": "^1.2.24",
-        "@aws-amplify/core": "^1.0.27",
+        "@aws-amplify/auth": "^1.2.30",
+        "@aws-amplify/core": "^1.0.31",
         "@babel/cli": "^7.4.4",
         "@babel/core": "^7.4.5",
-        "@material-ui/core": "^4.0.1",
+        "@material-ui/core": "^4.3.0",
         "@material-ui/icons": "^4.0.1",
-        "@material-ui/styles": "^4.0.1",
-        "@storybook/addon-actions": "^5.1.3",
-        "@storybook/addon-storyshots": "^5.1.3",
-        "@storybook/react": "^5.1.3",
+        "@storybook/addon-actions": "^5.1.10",
+        "@storybook/addon-storyshots": "^5.1.10",
+        "@storybook/react": "^5.1.10",
         "@testing-library/react": "^8.0.1",
-        "@types/jest": "^24.0.13",
+        "@types/jest": "^24.0.16",
         "@types/storybook__addon-storyshots": "^4.0.1",
         "@types/storybook__react": "^4.0.2",
         "@types/zxcvbn": "^4.4.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-dev-expression": "^0.2.2",
+        "babel-plugin-macros": "^2.6.1",
         "babel-plugin-react-remove-properties": "^0.3.0",
         "babel-preset-react-app": "^9.0.0",
         "cross-env": "^5.2.0",
         "jest": "^24.8.0",
         "npm-run-all": "^4.1.5",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "react-test-renderer": "^16.8.6",
         "require-context.macro": "^1.0.4",
         "rimraf": "^2.6.3",
-        "typescript": "^3.5.1"
+        "typescript": "^3.5.3"
     }
 }
