--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "private": true,
     "scripts": {
         "storybook": "yarn workspace amplify-material-ui storybook",
-        "grooming:outdated": "yarn outdated",
-        "grooming:upgrade": "yarn upgrade-interactive --latest",
+        "all:outdated": "yarn outdated",
+        "all:upgrade": "yarn upgrade-interactive --latest",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --cache  --report-unused-disable-directives",
         "lint:ci": "eslint '*/**/*.{js,ts,tsx}' --report-unused-disable-directives",
         "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --cache --fix",
@@ -14,7 +14,7 @@
     },
     "workspaces": [
         "e2e-tests",
-        "amplify-material-ui"
+        "packages/*"
     ],
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^1.10.2",
