--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,5 +110,5 @@ workflows:
       - unit_tests:
           requires:
             - bootstrap
-      - e2e_tests:
+      - e2e_tests_auth:
           <<: *e2e-test-workflow
