--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint": "^6.3.0",
         "eslint-config-prettier": "^6.2.0",
         "eslint-config-react-app": "^5.0.1",
+        "eslint-plugin-flowtype": "^4.3.0",
         "eslint-plugin-import": "2.x",
         "eslint-plugin-jsx-a11y": "6.x",
         "eslint-plugin-prettier": "^3.1.0",
