--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,17 @@
 {
-  "npmClient": "yarn",
-  "useWorkspaces": true,
-  "version": "0.0.17"
+    "command": {
+        "create": {
+            "license": "MIT"
+        },
+        "publish": {
+            "allowBranch": "master",
+            "bump": "patch",
+            "conventionalCommits": true,
+            "message": "chore(release): Publish"
+        }
+    },
+    "npmClient": "yarn",
+    "useWorkspaces": true,
+    "version": "independent",
+    "ignoreChanges": ["**/__tests__/**", "**/__mocks__/**", "**/__stories__/**"]
 }
