--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
         "storybook": "yarn workspace amplify-material-ui storybook",
         "all:outdated": "yarn outdated",
         "all:upgrade": "yarn upgrade-interactive --latest",
-        "lint": "eslint '*/**/*.{js,ts,tsx}' --cache  --report-unused-disable-directives",
-        "lint:ci": "eslint '*/**/*.{js,ts,tsx}' --report-unused-disable-directives",
-        "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --cache --fix",
+        "lint": "eslint '*/**/*.{ts,tsx}' --cache  --report-unused-disable-directives",
+        "lint:ci": "eslint '*/**/*.{ts,tsx}' --report-unused-disable-directives",
+        "lint:fix": "eslint '*/**/*.{ts,tsx}' --cache --fix",
         "test:unit": "yarn workspace amplify-material-ui test",
         "prepare": "lerna run prepare"
     },
@@ -16,19 +16,17 @@
         "packages/*"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^1.10.2",
-        "@typescript-eslint/parser": "^1.10.2",
+        "@typescript-eslint/eslint-plugin": "^2.1.0",
+        "@typescript-eslint/parser": "^2.1.0",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.3.0",
         "eslint-config-prettier": "^6.2.0",
-        "eslint-config-react-app": "^5.0.1",
-        "eslint-plugin-flowtype": "^4.3.0",
         "eslint-plugin-import": "2.x",
         "eslint-plugin-jsx-a11y": "6.x",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-react": "^7.13.0",
         "eslint-plugin-react-hooks": "^2.0.1",
-        "lerna": "^3.15.0",
+        "lerna": "^3.16.4",
         "prettier": "^1.18.2"
     }
 }
