--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -2,8 +2,12 @@
     "name": "amplify-material-ui",
     "version": "0.0.18",
     "description": "A Material-UI based implementation of aws amplify",
-    "author": "hello@webappsolutions.de",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hupe1980/mplify-material-ui",
+        "directory": "packages/amplify-material-ui"
+    },
     "keywords": [
         "material-ui",
         "react",
