--- a/packages/ra-data-amplify-rest/package.json
+++ b/packages/ra-data-amplify-rest/package.json
@@ -3,6 +3,11 @@
     "version": "0.0.2",
     "description": "aws amplify REST Data Provider for react-admin",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hupe1980/mplify-material-ui",
+        "directory": "packages/ra-data-amplify-rest"
+    },
     "keywords": [
         "react",
         "aws amplify",
