--- a/packages/ra-data-amplify-rest/tsconfig.json
+++ b/packages/ra-data-amplify-rest/tsconfig.json
@@ -4,5 +4,5 @@
         "outDir": "lib"
     },
     "include": ["src"],
-    "exclude": ["node_modules", "lib", "**/__tests__/*"]
+    "exclude": ["node_modules", "lib"]
 }
