--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -23,7 +23,6 @@
         "lib"
     ],
     "scripts": {
-        "storybook": "start-storybook",
         "clean": "rimraf lib",
         "build": "cross-env NODE_ENV=development run-s clean build:**",
         "build:types": "tsc --emitDeclarationOnly",
@@ -48,7 +47,8 @@
     },
     "dependencies": {
         "clsx": "^1.0.4",
-        "formik": "^2.0.1-rc.5",
+        "formik": "^2.0.3",
+        "formik-material-ui": "^1.0.0",
         "react-is-mounted-hook": "^1.0.1",
         "react-recaptcha-hook": "^1.0.5",
         "react-script-hook": "^1.0.11",
@@ -64,34 +64,28 @@
         "react-dom": "^16.8.6"
     },
     "devDependencies": {
-        "@aws-amplify/auth": "^1.2.30",
-        "@aws-amplify/core": "^1.0.31",
-        "@babel/cli": "^7.6.0",
-        "@babel/core": "^7.6.0",
-        "@material-ui/core": "^4.4.1",
-        "@material-ui/icons": "^4.4.1",
-        "@storybook/addon-actions": "^5.1.10",
-        "@storybook/addon-storyshots": "^5.1.10",
-        "@storybook/react": "^5.1.10",
-        "@testing-library/react": "^9.1.4",
-        "@types/jest": "^24.0.16",
-        "@types/storybook__addon-storyshots": "^5.1.1",
-        "@types/storybook__react": "^4.0.2",
+        "@aws-amplify/auth": "^1.5.0",
+        "@aws-amplify/core": "^1.2.4",
+        "@babel/cli": "^7.6.4",
+        "@babel/core": "^7.6.4",
+        "@material-ui/core": "^4.5.2",
+        "@material-ui/icons": "^4.5.1",
+        "@testing-library/react": "^9.3.1",
+        "@types/jest": "^24.0.21",
         "@types/zxcvbn": "^4.4.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
         "babel-plugin-dev-expression": "^0.2.2",
         "babel-plugin-macros": "^2.6.1",
         "babel-plugin-react-remove-properties": "^0.3.0",
-        "babel-preset-react-app": "^9.0.0",
-        "cross-env": "^5.2.1",
+        "babel-preset-react-app": "^9.0.2",
+        "cross-env": "^6.0.3",
         "jest": "^24.8.0",
         "npm-run-all": "^4.1.5",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-test-renderer": "^16.8.6",
-        "require-context.macro": "^1.2.1",
+        "react": "^16.11.0",
+        "react-dom": "^16.11.0",
+        "react-test-renderer": "^16.11.0",
         "rimraf": "^3.0.0",
-        "typescript": "^3.6.2"
+        "typescript": "^3.6.4"
     }
 }
