--- a/packages/ra-data-amplify-rest/package.json
+++ b/packages/ra-data-amplify-rest/package.json
@@ -29,14 +29,14 @@
     },
     "peerDependencies": {
         "@aws-amplify/api": "^1.1.1",
-        "ra-core": "^3.0.0-alpha.4"
+        "ra-core": "^3.0.0-beta.4"
     },
     "devDependencies": {
-        "@aws-amplify/api": "^1.1.1",
-        "@types/jest": "^24.0.18",
+        "@aws-amplify/api": "^1.2.4",
+        "@types/jest": "^24.0.21",
         "jest": "^24.9.0",
-        "ra-core": "^3.0.0-alpha.4",
+        "ra-core": "^3.0.0-beta.4",
         "rimraf": "^3.0.0",
-        "typescript": "^3.6.2"
+        "typescript": "^3.6.4"
     }
 }
