--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -71,6 +71,7 @@
         "@material-ui/core": "^4.5.2",
         "@material-ui/icons": "^4.5.1",
         "@testing-library/react": "^9.3.1",
+        "@testing-library/react-hooks": "^3.1.1",
         "@types/jest": "^24.0.21",
         "@types/zxcvbn": "^4.4.0",
         "babel-jest": "^24.8.0",
