--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "scripts": {
         "all:outdated": "yarn outdated",
         "all:upgrade": "yarn upgrade-interactive --latest",
-        "lint": "eslint '*/**/*.{ts,tsx}' --cache  --report-unused-disable-directives",
         "lint:ci": "eslint '*/**/*.{ts,tsx}' --report-unused-disable-directives",
-        "lint:fix": "eslint '*/**/*.{ts,tsx}' --cache --fix",
+        "lint:fix": "eslint '*/**/*.{ts,tsx}' --fix",
         "test:unit": "yarn workspace amplify-material-ui test",
         "prepare": "lerna run prepare"
     },
@@ -15,8 +14,8 @@
         "packages/*"
     ],
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^2.6.1",
-        "@typescript-eslint/parser": "^2.6.1",
+        "@typescript-eslint/eslint-plugin": "^2.7.0",
+        "@typescript-eslint/parser": "^2.7.0",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.6.0",
         "eslint-config-prettier": "^6.5.0",
@@ -25,7 +24,7 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^2.2.0",
-        "lerna": "^3.18.3",
-        "prettier": "^1.18.2"
+        "lerna": "^3.18.4",
+        "prettier": "^1.19.1"
     }
 }
