--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -88,5 +88,6 @@
         "react-test-renderer": "^16.11.0",
         "rimraf": "^3.0.0",
         "typescript": "^3.7.2"
-    }
+    },
+    "gitHead": "334449b1c1ca6493b6bacb56e5f30551c60d9d01"
 }
