--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -67,6 +67,7 @@
         "babel-loader": "^8.0.6",
         "babel-plugin-dev-expression": "^0.2.2",
         "babel-plugin-macros": "^2.6.2",
+        "babel-plugin-optimize-clsx": "^2.5.0",
         "babel-plugin-react-remove-properties": "^0.3.0",
         "babel-preset-react-app": "^9.0.2",
         "cross-env": "^6.0.3",
