--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^2.3.0",
+        "husky": "^3.0.9",
         "lerna": "^3.18.4",
+        "lint-staged": "^9.4.3",
         "prettier": "^1.19.1"
     }
 }
