--- a/packages/amplify-react-admin/package.json
+++ b/packages/amplify-react-admin/package.json
@@ -1,20 +1,18 @@
 {
-    "name": "ra-data-amplify-rest",
-    "version": "0.0.12",
-    "description": "aws amplify REST Data Provider for react-admin",
+    "name": "amplify-react-admin",
+    "version": "0.0.1",
+    "description": "aws amplify based react-admin",
     "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/hupe1980/amplify-material-ui",
-        "directory": "packages/ra-data-amplify-rest"
+        "directory": "packages/amplify-react-admin"
     },
     "keywords": [
         "react",
         "aws amplify",
         "amplify",
-        "react admin",
-        "rest",
-        "api"
+        "react admin"
     ],
     "main": "lib/index.js",
     "types": "lib/index.d.ts",
@@ -28,16 +26,23 @@
         "prepare": "npm run build"
     },
     "peerDependencies": {
-        "@aws-amplify/api": "^1.1.1",
-        "ra-core": "^3.0.0-beta.4"
+        "react": "^16.12.0",
+        "react-admin": "^3.0.0-beta.6",
+        "react-dom": "^16.12.0"
     },
     "devDependencies": {
-        "@aws-amplify/api": "^1.2.4",
         "@types/jest": "^24.0.23",
+        "@types/react-router-dom": "^5.1.2",
         "jest": "^24.9.0",
-        "ra-core": "^3.0.0-beta.6",
+        "react": "^16.12.0",
+        "react-admin": "^3.0.0-beta.6",
+        "react-dom": "^16.12.0",
         "rimraf": "^3.0.0",
         "typescript": "^3.7.2"
     },
-    "gitHead": "334449b1c1ca6493b6bacb56e5f30551c60d9d01"
+    "dependencies": {
+        "amplify-material-ui": "^0.0.31",
+        "history": "^4.10.1"
+    },
+    "sideEffects": false
 }
