--- a/packages/ra-data-amplify-rest/tsconfig.json
+++ b/packages/ra-data-amplify-rest/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "types", "test"],
+  "include": ["src"],
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
