--- a/packages/amplify-react-admin/package.json
+++ b/packages/amplify-react-admin/package.json
@@ -33,7 +33,7 @@
   },
   "peerDependencies": {
     "react": ">=16",
-    "react-admin": "^3.0.0-beta.6"
+    "react-admin": "^3.0.0"
   },
   "prettier": {
     "printWidth": 80,
@@ -47,7 +47,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "react": "^16.12.0",
-    "react-admin": "^3.0.0-beta.6",
+    "react-admin": "^3.0.0",
     "react-dom": "^16.12.0",
     "rimraf": "^3.0.0",
     "tsdx": "^0.11.0",
