--- a/packages/amplify-auth-hooks/package.json
+++ b/packages/amplify-auth-hooks/package.json
@@ -27,7 +27,7 @@
     "build": "tsdx build",
     "test": "tsdx test --env=jsdom",
     "lint": "tsdx lint",
-    "prepare": "npm run build",
+    "prepare": "yarn run build",
     "size": "size-limit"
   },
   "dependencies": {
@@ -49,15 +49,10 @@
   "devDependencies": {
     "@aws-amplify/auth": "^1.2.24",
     "@aws-amplify/core": "^1.0.27",
-    "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "rimraf": "^3.0.0",
-    "tsdx": "^0.11.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "react-dom": "^16.12.0"
   },
   "sideEffects": false
 }
