--- a/packages/amplify-react-admin/package.json
+++ b/packages/amplify-react-admin/package.json
@@ -25,7 +25,7 @@
     "build": "tsdx build",
     "test": "tsdx test --env=jsdom",
     "lint": "tsdx lint",
-    "prepare": "npm run build"
+    "prepare": "yarn run build"
   },
   "dependencies": {
     "amplify-material-ui": "^0.0.34",
@@ -42,17 +42,12 @@
     "trailingComma": "es5"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "react": "^16.12.0",
     "react-admin": "^3.0.0",
-    "react-dom": "^16.12.0",
-    "rimraf": "^3.0.0",
-    "tsdx": "^0.11.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "react-dom": "^16.12.0"
   },
   "sideEffects": false
 }
