--- a/packages/ra-data-amplify-rest/package.json
+++ b/packages/ra-data-amplify-rest/package.json
@@ -28,7 +28,7 @@
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "npm run build"
+    "prepare": "yarn run build"
   },
   "peerDependencies": {
     "@aws-amplify/api": "^1.1.1",
@@ -42,12 +42,7 @@
   },
   "devDependencies": {
     "@aws-amplify/api": "^1.2.4",
-    "@types/jest": "^24.0.23",
-    "ra-core": "^3.0.0",
-    "rimraf": "^3.0.0",
-    "tsdx": "^0.11.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
+    "ra-core": "^3.0.0"
   },
   "sideEffects": false
 }
