--- a/packages/amplify-auth-hooks/package.json
+++ b/packages/amplify-auth-hooks/package.json
@@ -16,7 +16,7 @@
   ],
   "license": "MIT",
   "main": "dist/index.js",
-  "module": "dist/hooks.esm.js",
+  "module": "dist/amplify-auth-hooks.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
