--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -39,11 +39,9 @@
     "qrcode.react": "^1.0.0",
     "react-intl": "^3.7.0",
     "react-recaptcha-hook": "^1.0.5",
-    "tiny-invariant": "^1.0.6",
-    "zxcvbn": "^4.4.2"
+    "tiny-invariant": "^1.0.6"
   },
   "peerDependencies": {
-    "@aws-amplify/auth": "^1.2.24",
     "@aws-amplify/core": "^1.0.27",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
@@ -56,7 +54,6 @@
     "trailingComma": "es5"
   },
   "devDependencies": {
-    "@aws-amplify/auth": "^1.5.0",
     "@aws-amplify/core": "^1.2.4",
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.0.1",
@@ -66,7 +63,6 @@
     "@types/qrcode.react": "^1.0.0",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
-    "@types/zxcvbn": "^4.4.0",
     "babel-plugin-optimize-clsx": "^2.5.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "react": "^16.12.0",
