--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ executors:
         parameters:
             image:
                 type: string
-                default: '10'
+                default: "10"
         docker:
             - image: circleci/node:<< parameters.image >>
 
@@ -64,12 +64,12 @@ commands:
         parameters:
             trigger_pattern:
                 type: string
-                default: 'packages/*|.circleci/*'
+                default: "packages/*|.circleci/*"
             test_path:
                 type: string
             test_command:
                 type: string
-                default: '' # if unset, e2e-test.sh specifies the command
+                default: "" # if unset, e2e-test.sh specifies the command
         steps:
             - checkout
             - run: ./scripts/assert-changed-files.sh "<< parameters.trigger_pattern >>|<< parameters.test_path >>/*"
@@ -93,7 +93,7 @@ jobs:
             - persist_to_workspace:
                   root: packages
                   paths:
-                      - '*'
+                      - "*"
 
     lint:
         executor: node
@@ -102,7 +102,7 @@ jobs:
             - <<: *restore_cache
             - <<: *install_node_modules
             - <<: *persist_cache
-            - run: yarn lint:ci
+            - run: yarn lint
 
     unit_tests_node10:
         executor: node
@@ -111,7 +111,7 @@ jobs:
     unit_tests_node12:
         executor:
             name: node
-            image: '12'
+            image: "12"
         <<: *test_template
 
     e2e_tests_auth:
@@ -119,7 +119,7 @@ jobs:
         steps:
             - e2e-test:
                   test_path: e2e-tests/auth
-                  trigger_pattern: 'packages/amplify-material-ui|.circleci/*'
+                  trigger_pattern: "packages/amplify-material-ui|.circleci/*"
 
 workflows:
     version: 2
