--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -17,27 +17,22 @@
     "aws",
     "auth"
   ],
-  "main": "dist/index.js",
+  "main": "dist/amplify-material-ui.cjs.js",
   "module": "dist/amplify-material-ui.esm.js",
-  "typings": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build",
-    "test": "tsdx test --env=jsdom --coverage --maxWorkers=2",
-    "lint": "tsdx lint",
-    "prepare": "yarn run build"
+    "test": "jest"
   },
   "dependencies": {
     "amplify-auth-hooks": "^0.0.9",
     "clsx": "^1.0.4",
-    "formik": "^2.0.6",
+    "formik": "^2.0.8",
     "formik-material-ui": "^1.0.0",
     "langtag-utils": "^2.0.0",
     "qrcode.react": "^1.0.0",
-    "react-intl": "^3.9.1",
+    "react-intl": "^3.9.2",
     "react-recaptcha-hook": "^1.0.5",
     "tiny-invariant": "^1.0.6"
   },
@@ -45,6 +40,7 @@
     "@aws-amplify/core": "^1.0.27",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.0.1",
     "react": ">=16"
   },
   "prettier": {
@@ -55,29 +51,17 @@
   },
   "devDependencies": {
     "@aws-amplify/core": "^2.2.0",
-    "@material-ui/core": "^4.7.1",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/styles": "^4.7.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.4.0",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/qrcode.react": "^1.0.0",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
-    "babel-plugin-optimize-clsx": "^2.5.0",
-    "babel-plugin-react-remove-properties": "^0.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
-  },
-  "jest": {
-    "globals": {
-      "__DEV__": "boolean"
-    },
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/test/setupTests.ts"
-    ]
   },
   "sideEffects": false
 }
