--- a/package.json
+++ b/package.json
@@ -17,34 +17,35 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/preset-typescript": "^7.8.3",
-    "@preconstruct/cli": "^1.1.4",
-    "@types/jest": "^24.9.0",
-    "@typescript-eslint/eslint-plugin": "2.16.0",
-    "@typescript-eslint/parser": "2.16.0",
-    "babel-eslint": "10.x",
-    "babel-plugin-optimize-clsx": "^2.5.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@preconstruct/cli": "^1.1.14",
+    "@types/jest": "^26.0.3",
+    "@typescript-eslint/eslint-plugin": "3.6.0",
+    "@typescript-eslint/parser": "3.6.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-optimize-clsx": "^2.6.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "bundlesize": "^0.18.0",
-    "cross-env": "^6.0.3",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-plugin-flowtype": "3.x",
-    "eslint-plugin-import": "2.20.0",
-    "eslint-plugin-jsx-a11y": "6.x",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "jest": "^24.9.0",
-    "lerna": "^3.20.2",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.7.4"
+    "cross-env": "^7.0.2",
+    "eslint": "7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react-hooks": "4.0.5",
+    "jest": "^26.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "lerna": "^3.22.1",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.6"
   },
   "preconstruct": {
     "packages": [
