--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "all:outdated": "yarn outdated",
-    "all:upgrade": "yarn upgrade-interactive --latest",
+    "outdated:all": "yarn outdated",
+    "upgrade:all": "yarn upgrade-interactive --latest",
     "lint": "eslint '*/**/*.{ts,tsx}' --report-unused-disable-directives",
     "lint:fix": "eslint '*/**/*.{ts,tsx}' --fix",
     "postinstall": "preconstruct dev",
