--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ commands:
             - <<: *install_node_modules
             - <<: *persist_cache
             - <<: *attach_to_bootstrap
+            - run: yarn build
             - run: ./scripts/e2e-test.sh "<< parameters.test_path >>" "<< parameters.test_command >>"
 
 version: 2.1
