chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -10,40 +10,42 @@
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "size": "bundlesize",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test:e2e-auth": "yarn workspace e2e-test-auth test",
+    "test:e2e-react-admin": "yarn workspace e2e-test-react-admin test"
   },
   "workspaces": [
     "e2e-tests/*",
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@preconstruct/cli": "^1.1.31",
+    "@babel/core": "^7.12.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@preconstruct/cli": "^2.0.0",
     "@types/jest": "^26.0.15",
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
     "babel-eslint": "10.1.0",
     "babel-plugin-optimize-clsx": "^2.6.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "bundlesize": "^0.18.0",
     "cross-env": "^7.0.2",
-    "eslint": "7.11.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-config-react-app": "^5.2.1",
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "^26.6.0",
+    "jest": "26.6.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "lerna": "^3.22.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
