--- a/packages/amplify-material-ui/package.json
+++ b/packages/amplify-material-ui/package.json
@@ -34,7 +34,8 @@
     "qrcode.react": "^1.0.0",
     "react-intl": "^5.10.4",
     "react-recaptcha-hook": "^1.1.1",
-    "tiny-invariant": "^1.1.0"
+    "tiny-invariant": "^1.1.0",
+    "yup": "^0.32.9"
   },
   "peerDependencies": {
     "@aws-amplify/core": "^1.0.27",
@@ -54,6 +55,7 @@
     "@types/qrcode.react": "^1.0.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/yup": "^0.29.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
